--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "nativewind": "^2.0.11",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
@@ -42,6 +43,7 @@
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "autoprefix": "^1.0.1",
     "babel-jest": "^29.4.1",
     "cypress": "^13.0.0",
     "detox": "^20.11.1",
@@ -64,10 +66,12 @@
     "metro-react-native-babel-transformer": "0.76.7",
     "metro-resolver": "0.76.7",
     "nx": "17.0.3",
+    "postcss": "^8.4.31",
     "prettier": "^2.6.2",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.3.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
